# haxsim

./: .gitignore  .gitmodules  build.sh  haxsim.nimble  nim.cfg  readme.org  todo.org
.github/workflows/: ci.yaml  test.yaml
docs/: cpu-logic.org
src/: haxsim.nim
src/cpus/: cache.nim  core.nim  i8080.nim  nim.cfg
src/cpus/i386/: .gitignore  common.nim  commonhpp.nim  eventer.nim  i386-notes.org  maincpp.nim  membase.nim  nim.cfg  opcodes.ods  read_opcodes.nim
src/cpus/i386/bios/: biosc.nim  biosh.nim  commonh.nim  font8x8h.nim  vgac.nim
src/cpus/i386/compiler/: assembler.nim  external.nim
src/cpus/i386/device/: com.nim  comcpp.nim  dev_io.nim  dev_iohpp.nim  dev_irq.nim  deviceshpp.nim  dma.nim  dmahpp.nim  fdd.nim  fddcpp.nim  fddhpp.nim  keyboard.nim  keyboardcpp.nim  keyboardhpp.nim  mousecpp.nim  mousehpp.nim  pic.nim  piccpp.nim  pichpp.nim  pit.nim  pitcpp.nim  syscontrol.nim  syscontrolcpp.nim  vga.nim  vgacpp.nim  vgahpp.nim
src/cpus/i386/emulator/: access.nim  accesscpp.nim  accesshpp.nim  descriptor.nim  emulator.nim  emulatorcpp.nim  exception.nim  interrupt.nim  interruptcpp.nim  interrupthpp.nim  ui.nim  uicpp.nim  uihpp.nim
src/cpus/i386/hardware/: cr.nim  eflags.nim  eflagscpp.nim  hardware.nim  io.nim  iocpp.nim  iohpp.nim  memory.nim  memorycpp.nim  processor.nim  processorcpp.nim
src/cpus/i386/include/: commonhpp.nim  eventer.nim
src/cpus/i386/include/device/: comhpp.nim  dev_iohpp.nim  dev_irqhpp.nim  dmahpp.nim  fddhpp.nim  keyboardhpp.nim  mousehpp.nim  pichpp.nim  pithpp.nim  syscontrolhpp.nim  vgahpp.nim
src/cpus/i386/include/emulator/: accesshpp.nim  descriptorhpp.nim  emulatorhpp.nim  exceptionhpp.nim  interrupthpp.nim  uihpp.nim
src/cpus/i386/include/hardware/: crhpp.nim  eflagshpp.nim  hardwarehpp.nim  iohpp.nim  memoryhpp.nim  processorhpp.nim
src/cpus/i386/include/instruction/: basehpp.nim  instructionhpp.nim
src/cpus/i386/include/util/: debughpp.nim  lruhpp.nim
src/cpus/i386/instruction/: .fdignore  base.nim  emu.nim  emucpp.nim  exec.nim  execcpp.nim  instr16.nim  instr16cpp.nim  instr32.nim  instr32cpp.nim  instr_base.nim  instr_basecpp.nim  instruction.nim  opcodes.nim  parse.nim  parsecpp.nim  syntaxes.nim
src/cpus/i386/sample/: commonh.nim  initc.nim  keyboardc.nim  main2c.nim  mainc.nim  vgac.nim
src/cpus/i386/util/: debugcpp.nim  lruhpp.nim
src/gui/: .fdignore  .gitignore  CMakeLists.txt  base.html  build.sh  em_drive.nim  em_imgui.nim  em_main.c  em_main.cpp  em_main.hpp  em_main.html  em_main.nim  em_resource.qrc  em_sokol.nim  em_style.qss  em_wrap.nim  get_nim_dir.sh  haxsim_gui.pro  httpserve.nim  main.html  nim.cfg  simcore.cpp  simcore.hpp  tinyfiledialogs.c  tinyfiledialogs.h  tinyfiledialogs.nim
src/haxsim/: clexer.nim  cparser.nim  ctypes.nim  grammar.bnf  hl_error.nim  hl_eval.nim  hl_eval_ast.nim  hl_eval_register.nim  hl_eval_stack.nim  hl_lexer.nim  hl_parser.nim  hl_semcheck.nim  hl_types.nim  hs_x86.nim  submodule.nim
tests/: .gitignore  nim.cfg  tAsmParser.nim  tCLIuse.nim  tClexer.nim  tEmuEndToEnd.nim  tExternApplication.nim  tHLlexer.nim  tVGA.nim  tX86Assembler.nim  tX86Sim.nim  test1.nim
tests/assets/: video.asm
text/: main.org
